# ezpz-ai

./: README.md  pyproject.toml
.github/workflows/: publish.yml
