[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = 'ezpz-ai'
version = '0.9.0'
description = 'Distributed training, :lemon: `ezpz`.'
readme = { file = "README", content-type = "text/x-rst" }
dependencies = [
    "ezpz",
]

[tool.uv.sources]
ezpz = { git = "https://github.com/saforem2/ezpz" }
